name:                angular-fay
version:             0.0.0.1
synopsis:            Fay FFI bindings for AngularJS
license:             MIT
license-file:        LICENSE
category:            Web
build-type:          Simple
cabal-version:       >=1.10

data-files:
  src/Angular.hs

Library
  Hs-Source-Dirs:   src
  Exposed-Modules:  Angular
  -- other-modules:
  -- other-extensions:
  Ghc-Options:      -Wall -Werror
  Build-Depends:
      fay-base   >= 0.16
    , fay-text   >= 0.2

Executable Angular
  Hs-Source-Dirs:   src
  Main-Is:          Main.hs
  Ghc-Options:      -Wall -Werror
  Build-Depends:
      fay-base   >= 0.16
    , fay-text   >= 0.2