name:                fay-angular
version:             0.1.0.0
synopsis:            Fay FFI bindings for AngularJS
homepage:            https://github.com/faylang/fay-angular
license:             BSD3
license-file:        LICENSE
category:            Web
build-type:          Simple
cabal-version:       >=1.10

data-files:
  src/Angular.hs

library
  hs-source-dirs: src
  exposed-modules: Angular
  -- other-modules:
  -- other-extensions:
  build-depends:
      fay-base >= 0.16
    , fay-text >= 0.2
  default-language: Haskell2010
  ghc-options: -Wall
